# ratatui-py

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  ratatui-py-demos  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  render-gif.yml  wheels.yml
api/: index.html
assets/: dashboard.cast
demos/: index.html
docs/: api.md  demos.md  index.md  quickstart.md  recording.md  snapshots.md
docs/assets/: dashboard.cast
examples/: canvas_and_logo.py  hello_paragraph.py
quickstart/: index.html
recording/: index.html
scripts/: convert_cast_v3_to_v2.py  generate_image_snapshots.py  generate_snapshot_grid.py  generate_text_snapshots.py  render_screencasts.sh  screencasts.tsv
search/: search_index.json
src/ratatui_py/: __init__.py  _bootstrap.py  _ffi.py  demo_runner.py  examples.py  layout.py  prelude.py  types.py  util.py  wrappers.py  wrappers.pyi
src/ratatui_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_headless.py
