[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratatui-py"
version = "0.1.0"
description = "Python bindings for ratatui_ffi (Ratatui C ABI) via ctypes"
readme = "README.md"
authors = [{ name = "holo-q" }]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
ratatui-py-hello = "ratatui_py.examples:hello_main"
ratatui-py-widgets = "ratatui_py.examples:widgets_main"

[project.urls]
Homepage = "https://github.com/holo-q/ratatui-py"
Repository = "https://github.com/holo-q/ratatui-py"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ratatui_py*"]
exclude = ["tests*"]

[tool.uv]
dev-dependencies = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8",
]
